--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"svelte-popover": "^2.0.8",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0",
@@ -34,6 +35,10 @@
 	"dependencies": {
 		"seedrandom": "^3.0.5",
 		"svelte-chartjs": "^3.1.2",
-		"svelte-i18n": "^3.6.0"
+		"svelte-easy-popover": "^1.0.0",
+		"svelte-i18n": "^3.6.0",
+		"svelte-smooth-popover": "^1.0.8",
+		"svelte-tippy": "^1.3.2",
+		"tippy.js": "^6.3.7"
 	}
 }
