--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/better-sqlite3": "^7.6.4",
 		"@types/seedrandom": "^3.0.5",
+		"@types/uuid": "^9.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -33,12 +35,14 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"better-sqlite3": "^8.4.0",
 		"seedrandom": "^3.0.5",
 		"svelte-chartjs": "^3.1.2",
 		"svelte-easy-popover": "^1.0.0",
 		"svelte-i18n": "^3.6.0",
 		"svelte-smooth-popover": "^1.0.8",
 		"svelte-tippy": "^1.3.2",
-		"tippy.js": "^6.3.7"
+		"tippy.js": "^6.3.7",
+		"uuid": "^9.0.0"
 	}
 }
