--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
 		"seedrandom": "^3.0.5",
 		"svelte-chartjs": "^3.1.2",
 		"svelte-easy-popover": "^1.0.0",
+		"svelte-flags": "^0.4.6",
 		"svelte-i18n": "^3.6.0",
+		"svelte-icons": "^2.1.0",
+		"svelte-modals": "^1.2.1",
+		"svelte-select": "^5.6.1",
 		"svelte-smooth-popover": "^1.0.8",
-		"svelte-tippy": "^1.3.2",
-		"tippy.js": "^6.3.7",
 		"uuid": "^9.0.0"
 	}
 }
