--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"svelte-flags": "^0.4.6",
 		"svelte-i18n": "^3.6.0",
 		"svelte-icons": "^2.1.0",
+		"svelte-markdown": "^0.2.3",
 		"svelte-modals": "^1.2.1",
 		"svelte-select": "^5.6.1",
 		"svelte-smooth-popover": "^1.0.8",
