--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-cloudflare": "^2.3.3",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/better-sqlite3": "^7.6.4",
 		"@types/seedrandom": "^3.0.5",
