--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0",
-		"vitest": "^0.25.3"
+		"vitest": "^0.25.3",
+		"wrangler": "^3.11.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"better-sqlite3": "^8.4.0",
 		"seedrandom": "^3.0.5",
-		"svelte-chartjs": "^3.1.2",
 		"svelte-easy-popover": "^1.0.0",
 		"svelte-flags": "^0.4.6",
-		"svelte-i18n": "^3.6.0",
+		"svelte-i18n": "^3.7.4",
 		"svelte-icons": "^2.1.0",
-		"svelte-markdown": "^0.2.3",
-		"svelte-modals": "^1.2.1",
+		"svelte-markdown": "^0.4.0",
+		"svelte-modals": "^1.3.0",
 		"svelte-select": "^5.6.1",
 		"svelte-smooth-popover": "^1.0.8",
 		"uuid": "^9.0.0"
