--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20231002.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-cloudflare": "^2.3.3",
 		"@sveltejs/kit": "^1.20.4",
@@ -29,7 +30,7 @@
 		"svelte-check": "^3.4.3",
 		"svelte-popover": "^2.0.8",
 		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
+		"typescript": "^5.2.2",
 		"vite": "^4.3.0",
 		"vitest": "^0.25.3",
 		"wrangler": "^3.11.0"
