--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-cloudflare": "^2.3.3",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/chart.js": "^2.9.38",
 		"@types/seedrandom": "^3.0.5",
 		"@types/uuid": "^9.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -37,6 +38,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"chart.js": "^4.4.0",
 		"seedrandom": "^3.0.5",
 		"svelte-easy-popover": "^1.0.0",
 		"svelte-flags": "^0.4.6",
