--- a/package.json
+++ b/package.json
@@ -38,11 +38,15 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@lucia-auth/adapter-sqlite": "^3.0.0",
+		"@miniflare/d1": "^2.14.1",
+		"arctic": "^1.1.4",
 		"chart.js": "^4.4.0",
+		"lucia": "^3.0.1",
+		"miniflare": "^3.20231025.1",
+		"oslo": "^1.1.0",
 		"seedrandom": "^3.0.5",
 		"svelte-easy-popover": "^1.0.0",
-		"miniflare": "^3.20231025.1",
-		"@miniflare/d1": "^2.14.1",
 		"svelte-flags": "^0.4.6",
 		"svelte-i18n": "^3.7.4",
 		"svelte-icons": "^2.1.0",
