--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "ujrpg",
 	"version": "0.0.1",
 	"private": true,
+	"platform": "node",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -14,9 +15,9 @@
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20231002.0",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-cloudflare": "^2.3.3",
-		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/adapter-cloudflare": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/chart.js": "^2.9.38",
 		"@types/seedrandom": "^3.0.5",
 		"@types/uuid": "^9.0.2",
@@ -32,8 +33,8 @@
 		"svelte-popover": "^2.0.8",
 		"tslib": "^2.4.1",
 		"typescript": "^5.2.2",
-		"vite": "^4.3.0",
-		"vitest": "^0.25.3",
+		"vite": "^5.0.0",
+		"vitest": "^1.0.0",
 		"wrangler": "3.15.0"
 	},
 	"type": "module",
